large refactor of structure + making code better maintainable

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
-# Map files - generated daily
-maps/*/*.png
-maps/*/*.jpg
-maps/*/*.jpeg
+# Map data files
+*.png
+*.json
 
-# Generated JSON files
-maps/*.json
+# Node modules
+node_modules/
 
 # OS files
 .DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
